envoy.yml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                generate_request_id: true
                tracing: {}
                stat_prefix: ingress
                preserve_external_request_id: true
                always_set_request_id_in_response: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      rate_limits:
                        - actions:
                            - request_headers:
                                header_name: ":authority"
                                descriptor_key: "authority"
                            - extension:
                                  name: path
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor
                                    descriptor_key: path
                                    text: request.url_path
                            - request_headers:
                                header_name: ":method"
                                descriptor_key: "method"
                            - request_headers:
                                header_name: user-agent
                                descriptor_key: user-agent
                                skip_if_absent: true
                            - remote_address: {}
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: outbound|8081||healthz.healthz.svc.cluster.local
                            timeout: 5s

                http_filters:
                  - name: envoy.filters.http.ext_authz.v3.ExtAuthz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: outbound|8080||envoy-grpc.envoy-grpc.svc.cluster.local
                        timeout: 5s
                      transport_api_version: V3
                      failure_mode_allow: false

                  - name: envoy.filters.http.ext_authz.v3.ExtProc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      message_timeout: 5s
                      failure_mode_allow: false
                      allow_mode_override: true
                      mutation_rules:
                        allow_all_routing: true
                        allow_envoy: true
                      processing_mode:
                        request_header_mode: "SEND"
                        response_header_mode: "SEND"
                        request_body_mode: "NONE"
                        response_body_mode: "NONE"
                        request_trailer_mode: "SKIP"
                        response_trailer_mode: "SKIP"
                      grpc_service:
                        envoy_grpc:
                          cluster_name: outbound|8080||envoy-grpc.envoy-grpc.svc.cluster.local
                        timeout: 5s

                  - name: envoy.filters.http.lua.v3.Lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                            local cluster_name = "outbound|8081||healthz.healthz.svc.cluster.local"
                            local req_headers = {
                                [":method"] = "GET",
                                [":path"] = "/",
                                [":authority"] = "healthz.healthz.svc.cluster.local"
                            }
                            local resp_headers
                            local _, err = pcall(
                            function ()
                                resp_headers, _ = request_handle:httpCall(cluster_name, req_headers, "", 5000)
                            end)

                            if err then
                                request_handle:respond({ [":status"] = "503" }, "")
                            end

                        end

                        function envoy_on_response(response_handle)
                        end

                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      failure_mode_deny: true
                      timeout: 5s
                      domain: global-rls
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: outbound|8080||envoy-grpc.envoy-grpc.svc.cluster.local
                          timeout: 5s
                        transport_api_version: V3

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: outbound|8080||envoy-grpc.envoy-grpc.svc.cluster.local
      connect_timeout: 1s
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              max_concurrent_streams: 1000
              initial_stream_window_size: 65536  # 64 KiB
              initial_connection_window_size: 1048576  # 1 MiB
              connection_keepalive:
                interval: 30s
                timeout: 5s

      load_assignment:
        cluster_name: outbound|8080||envoy-grpc.envoy-grpc.svc.cluster.local
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8080


      load_assignment:
        cluster_name: outbound|8080||ratelimit.ratelimit.svc.cluster.local
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8080

    - name: outbound|8081||healthz.healthz.svc.cluster.local
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: outbound|8081||healthz.healthz.svc.cluster.local
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8081

    - name: datadog_agent
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: datadog_agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 8126

tracing:
  http:
    name: envoy.tracers.datadog
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.DatadogConfig
      collector_cluster: datadog_agent
      service_name: local-envoy
